# cy_analysis

./: .gitignore  README.md  pyproject.toml
data/bili/json/: search_comments_2026-02-15.json  search_comments_2026-02-19.json  search_contents_2026-02-15.json  search_contents_2026-02-19.json  search_creators_2026-02-15.json  search_creators_2026-02-19.json
data/douyin/json/: search_comments_2026-02-15.json  search_contents_2026-02-15.json  search_contents_2026-02-16.json  search_contents_2026-02-18.json
data/tieba/json/: search_comments_2026-02-15.json  search_comments_2026-02-19.json  search_contents_2026-02-15.json  search_contents_2026-02-19.json
data/weibo/json/: search_comments_2026-02-15.json  search_comments_2026-02-19.json  search_contents_2026-02-15.json  search_contents_2026-02-19.json
data/xhs/json/: search_comments_2026-02-15.json  (+3 more)
data/公众号----四川新闻网/: 文章列表 (article_list)_1.xlsx  文章列表 (article_list)_2.xlsx
docs/: 模型设计文档.md
models/ch45_rewrite/: generate_chapters_45.py  generate_detailed_chapters.py  run_analysis.py
outputs/: questionnaire.txt  reference_full.txt
outputs/ch45_rewrite/: feature_importance.csv  ipa_proxy_summary.csv  model_comparison.csv  model_metrics.json  platform_overview.csv  sem_fit_indices.csv  sem_main_paths.csv  sem_metrics.json  sem_path_estimates.csv  sentiment_distribution.csv  sentiment_score_samples.csv  spatiotemporal_metrics.json  spatiotemporal_proxy_predictions.csv  top_negative_examples.csv  top_positive_examples.csv  topic_keywords.csv  weekly_platform_volume.csv  word_frequency.csv  第4章-第5章重写稿_详细版.md
(+4 files in other folders)
