[project]
name = "cy-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jieba>=0.42.1",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pdf2image>=1.17.0",
    "pillow>=12.1.1",
    "pymupdf>=1.27.1",
    "pypdf>=6.7.1",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "semopy>=2.3.11",
    "shap>=0.49.1",
    "snownlp>=0.12.3",
    "xgboost>=3.2.0",
]
